myapp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - image: esieejoudioux/myapp:latest
          imagePullPolicy: IfNotPresent
          name: myapp
      restartPolicy: Always
