myapp-nodeport-service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  ports:
    - nodePort: 31280
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: myapp
  type: NodePort
